[gd_scene load_steps=16 format=4 uid="uid://b2y48jmww6633"]

[ext_resource type="Script" path="res://Scenes/main_scene.gd" id="1_l44a7"]
[ext_resource type="PackedScene" uid="uid://qwwidd5peaqv" path="res://Characters/character_body_2d.tscn" id="2_hfk1n"]
[ext_resource type="Script" path="res://Characters/player.gd" id="3_3n4nt"]
[ext_resource type="Script" path="res://Scripts/looseAndRetry.gd" id="4_32xbw"]
[ext_resource type="Texture2D" uid="uid://dj7j26n7ciu5" path="res://Assets/Libraries/Sprout Lands - Sprites - Basic pack/Tilesets/Grass.png" id="6_er48a"]
[ext_resource type="Texture2D" uid="uid://u0dslygj4bey" path="res://Assets/Personals/Tilesetv3.png" id="7_c1mgo"]
[ext_resource type="Texture2D" uid="uid://bs3x4utv3qsx" path="res://Assets/Personals/TilesetV4.png" id="7_o6lc7"]
[ext_resource type="PackedScene" uid="uid://bnclgwkqmdeli" path="res://Scenes/beer.tscn" id="8_xiuak"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wr5d2"]
bg_color = Color(0.155485, 0.167241, 0.387745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgk3i"]
bg_color = Color(0.734342, 0.548435, 0.516495, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nshra"]
texture = ExtResource("6_er48a")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_num5l"]
texture = ExtResource("7_c1mgo")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, -6.875, -3.875, -7, -6.75, -4, -7, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7, -8, -6.875)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 7, 8, 6.75, -3.875, 3.875, -7, -8, -6.875)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -7.125, -8, -7, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 6.875, 8, 6.875, -8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -5.875, -8, -6, 3, -2.875, 6, 8, 5.875, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 5.625, 8, 5.625, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 5.625, 8, 5.625, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wyiiq"]
texture = ExtResource("7_o6lc7")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -6.125, -3.75, -6, -6, -3.5, -6, 8, -8, 8, -8, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -5.875, -8, -5.875, -8, -8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 5.875, 8, 5.75, -3.125, 3, -6, -8, -5.875, -8, -8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.875, -8, -5.875, 8, -8, 8, -8, -8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 5.75, 8, 5.625, -8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 5.875, 8, 8, -8, 8, -8, -8, -6, -8, -5.875, 3.5, -3.125, 5.875)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 5.875, 8, 8, -8, 8, -8, 5.875)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(6, -8, 8, -8, 8, 8, -8, 8, -8, 6, 2.625, 5.875, 5.875, 3)
1:4/0 = 0
2:4/0 = 0
0:4/0 = 0

[sub_resource type="TileSet" id="TileSet_vgcvj"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_nshra")
sources/1 = SubResource("TileSetAtlasSource_num5l")
sources/2 = SubResource("TileSetAtlasSource_wyiiq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggebb"]
size = Vector2(8.25, 29.625)

[node name="GameLevel" type="Node2D"]
script = ExtResource("1_l44a7")

[node name="Player" parent="." instance=ExtResource("2_hfk1n")]
script = ExtResource("3_3n4nt")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../Camera2D")

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="PanelPerdu" type="Panel" parent="UI"]
offset_left = 40.0
offset_top = -216.0
offset_right = 271.0
offset_bottom = -104.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wr5d2")

[node name="Label" type="Label" parent="UI/PanelPerdu"]
layout_mode = 0
offset_left = 90.0
offset_top = 11.0
offset_right = 141.0
offset_bottom = 34.0
text = "Perdu "
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="UI/PanelPerdu"]
layout_mode = 0
offset_left = 73.0
offset_top = 57.0
offset_right = 156.0
offset_bottom = 94.0
text = "Rejouer"
script = ExtResource("4_32xbw")

[node name="TimerPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1938.0
offset_top = 23.0
offset_right = -1855.0
offset_bottom = 56.0
grow_horizontal = 0
tooltip_text = "Timer"
theme_override_styles/panel = SubResource("StyleBoxFlat_wr5d2")

[node name="Label" type="Label" parent="UI/TimerPanel"]
layout_mode = 0
offset_left = 45.0
offset_top = 6.0
offset_right = 93.0
offset_bottom = 29.0
vertical_alignment = 1

[node name="PanelGagner" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = -760.0
offset_bottom = -482.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jgk3i")

[node name="BoxContainer" type="BoxContainer" parent="UI/PanelGagner"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
vertical = true

[node name="Label" type="Label" parent="UI/PanelGagner/BoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11

[node name="NextLevelButton" type="Button" parent="UI/PanelGagner/BoxContainer"]
layout_mode = 2
text = "Niveau 2"

[node name="TileMap" type="TileMapLayer" parent="."]
z_index = -5
tile_map_data = PackedByteArray("AAD+////AQAAAAEAAAD+//7/AQAAAAAAAAD///7/AQABAAAAAAAAAP7/AQABAAAAAAAAAP//AQABAAEAAAABAAAAAQABAAEAAAAAAAEAAQABAAIAAAD//wEAAQABAAIAAAD//wAAAgAAAAQAAAD+/wAAAQAAAAEAAAAAAAAAAQABAAEAAAAAAAMAAQABAAEAAAACAAAAAQABAAEAAAADAP//AQABAAEAAAD/////AQABAAEAAAAAAP3/AQABAAEAAAABAP3/AQABAAEAAAACAPz/AgABAAQAAAADAPz/AQABAAEAAAACAP3/AQABAAEAAAD9/wEAAQABAAEAAAD8/wIAAQABAAEAAAD7/wMAAQABAAEAAAD7/wIAAQABAAEAAAD+/wEAAQAAAAIAAAABAP//AgACAAQAAAD+/wMAAQABAAEAAAD//wMAAQABAAEAAAACAAEAAQABAAIAAAAEAP//AgABAAQAAAAFAP7/AQACAAAAAAAFAP//AQABAAEAAAAEAAAAAQABAAEAAAADAAEAAQABAAIAAAABAAMAAQABAAEAAAAAAAQAAQABAAEAAAD//wQAAgABAAQAAAD+/wUAAQABAAEAAAD9/wIAAQABAAEAAAD9/wAAAQABAAEAAAD8/wEAAgABAAQAAAD7/wEAAQABAAEAAAD9//7/AQABAAEAAAD5//7/AQABAAEAAAD8//3/AQABAAEAAAD9//3/AQABAAEAAAD+//z/AgAAAAQAAAD8////AQABAAEAAAD7/wAAAQABAAEAAAD8/wAAAgAAAAQAAAACAP//AgABAAQAAAAEAP7/AQABAAAAAAAGAP//AQABAAAAAAADAP7/AQABAAAAAAD///3/AQABAAEAAAABAPz/AQABAAEAAAAAAPz/AQABAAEAAAD///z/AgAAAAQAAAADAP3/AQABAAEAAAAEAP3/AQABAAEAAAD9////AQABAAEAAAD+//3/AQABAAEAAAAEAAEAAQABAAIAAAD9/wMAAgABAAQAAAACAAMAAQABAAEAAAADAAMAAQABAAEAAAAEAAMAAQABAAEAAAAFAAMAAQABAAEAAAAGAAMAAgABAAQAAAAHAAIAAQABAAEAAAAGAAIAAgAAAAQAAAAFAAIAAQABAAEAAAAEAAIAAQABAAEAAAAGAAEAAQABAAEAAAAHAAEAAgAAAAQAAAAFAAEAAQACAAIAAAAHAAAAAQABAAIAAAAGAAAAAQABAAIAAAAFAAAAAQABAAEAAAAFAP3/AQABAAEAAAAFAPz/AgABAAQAAAAGAPz/AQABAAEAAAAHAPz/AQABAAEAAAAIAPz/AgABAAQAAAAJAP3/AQABAAEAAAAKAP3/AQABAAEAAAAKAP7/AQABAAAAAAAKAP//AgACAAQAAAAIAAAAAQABAAIAAAD7////AQABAAEAAAAEAPz/AQABAAEAAAAGAP7/AQABAAEAAAAGAP3/AQABAAEAAAAHAAMAAQABAAEAAAAHAP//AQABAAAAAAAHAP3/AQABAAEAAAD9//z/AQABAAEAAAD8//z/AQABAAEAAAD7//z/AQABAAEAAAD6//z/AgAAAAQAAAD5//z/AQABAAEAAAD5//3/AQABAAEAAAD5////AQABAAEAAAD5/wAAAgACAAQAAAD5/wEAAQABAAEAAAD5/wIAAQABAAEAAAD5/wMAAQABAAEAAAD6/wMAAQABAAEAAAD6/wIAAgAAAAQAAAD6/wAAAQABAAEAAAD6////AQABAAEAAAD5/wQAAQABAAEAAAD6/wQAAgABAAQAAAD7/wQAAgAAAAQAAAD8/wQAAQABAAEAAAD9/wQAAgACAAQAAAD+/wQAAQABAAEAAAABAAQAAQABAAEAAAACAAQAAgABAAQAAAADAAQAAQABAAEAAAAEAAQAAQABAAEAAAAFAAQAAgACAAQAAAAGAAQAAQABAAEAAAAHAAQAAQABAAEAAAAHAAUAAgABAAQAAAAGAAUAAQABAAEAAAAFAAUAAQABAAEAAAAEAAUAAQABAAEAAAADAAUAAQABAAEAAAACAAUAAQABAAEAAAABAAUAAgAAAAQAAAAAAAUAAQABAAEAAAD//wUAAQABAAEAAAD9/wUAAQABAAEAAAD8/wUAAQABAAEAAAD7/wUAAQABAAEAAAD6/wUAAQABAAEAAAD5/wUAAQABAAEAAAAIAP3/AgAAAAQAAAAIAP7/AQAAAAAAAAAIAP//AQABAAEAAAAIAAEAAQABAAEAAAAIAAIAAgABAAQAAAAIAAMAAQABAAEAAAAIAAUAAgABAAQAAAAJAAUAAQABAAEAAAAJAAQAAgAAAAQAAAAJAAMAAQABAAEAAAAJAAIAAQABAAEAAAAJAP//AgABAAQAAAAJAP7/AQABAAAAAAAJAPz/AQABAAEAAAAKAPz/AQABAAEAAAAKAAIAAgABAAQAAAAKAAMAAQABAAEAAAAKAAQAAQABAAEAAAAKAAUAAQABAAEAAAACAP7/AQABAAAAAAABAAEAAQABAAIAAAD4//z/AQABAAEAAAD4//3/AQABAAEAAAD4//7/AgABAAQAAAD4////AQABAAEAAAD4/wAAAQABAAEAAAD4/wEAAQABAAEAAAD4/wIAAQABAAEAAAD4/wMAAgABAAQAAAD1//r/AQACAAAAAAD1//v/AQABAAEAAAD1//z/AQABAAEAAAD1//3/AQABAAEAAAD1//7/AgACAAQAAAD1////AQABAAEAAAD1/wAAAQABAAEAAAD1/wEAAQABAAEAAAD1/wIAAQABAAEAAAD1/wMAAQABAAEAAAD1/wQAAgABAAQAAAD1/wUAAQABAAEAAAD1/wYAAQABAAEAAAD1/wcAAQABAAEAAAD2//r/AQABAAEAAAD2//v/AQABAAAAAAD2//z/AQABAAEAAAD2//3/AgABAAQAAAD2//7/AgABAAQAAAD2////AQABAAEAAAD2/wAAAgABAAQAAAD2/wEAAQABAAEAAAD2/wMAAgABAAQAAAD2/wQAAQABAAEAAAD2/wUAAQABAAEAAAD2/wYAAgABAAQAAAD2/wcAAQABAAEAAAD3//r/AgABAAQAAAD3//v/AQABAAAAAAD3//z/AgABAAQAAAD3//3/AgAAAAQAAAD3//7/AQABAAEAAAD3////AQABAAEAAAD3/wAAAgABAAQAAAD3/wEAAQABAAEAAAD3/wIAAQABAAEAAAD3/wMAAQABAAEAAAD3/wQAAQABAAEAAAD3/wUAAQABAAEAAAD3/wYAAQABAAEAAAD3/wcAAQABAAEAAAD4//r/AQABAAEAAAD4//v/AQABAAAAAAD4/wQAAQABAAEAAAD4/wUAAgAAAAQAAAD4/wYAAgAAAAQAAAD4/wcAAQABAAEAAAD5//r/AQABAAEAAAD5//v/AQABAAAAAAD5/wYAAQABAAEAAAD5/wcAAQABAAEAAAD6//r/AQABAAEAAAD6//v/AQABAAAAAAD7//r/AgABAAQAAAD7//v/AQABAAAAAAD8//r/AQABAAEAAAD8//v/AQABAAAAAAD8//7/AQABAAEAAAD8/wMAAQABAAEAAAD8/wYAAQABAAEAAAD8/wcAAQABAAEAAAD9//r/AQABAAEAAAD9//v/AQAAAAAAAAD9/wYAAgABAAQAAAD9/wcAAQABAAEAAAD+//r/AQABAAEAAAD+//v/AQABAAAAAAD+/wIAAgAAAAQAAAD+/wYAAQABAAEAAAD+/wcAAQABAAEAAAD///r/AQABAAEAAAD///v/AQABAAAAAAD//wIAAQABAAEAAAD//wYAAgAAAAQAAAD//wcAAQABAAEAAAAAAPr/AgABAAQAAAAAAPv/AQABAAAAAAAAAAIAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAABAPr/AQABAAEAAAABAPv/AgACAAQAAAABAAIAAgACAAQAAAABAAYAAgACAAQAAAABAAcAAgABAAQAAAACAPr/AQABAAEAAAACAPv/AQABAAEAAAACAAIAAQABAAEAAAACAAcAAQABAAEAAAADAPr/AQABAAEAAAADAPv/AQABAAEAAAADAAAAAQABAAEAAAADAAIAAgAAAAQAAAADAAYAAgABAAQAAAADAAcAAQABAAEAAAAEAPr/AQABAAEAAAAEAAYAAgAAAAQAAAAEAAcAAQABAAEAAAAFAPr/AQABAAEAAAAFAAYAAQABAAEAAAAFAAcAAgABAAQAAAAGAPr/AQABAAEAAAAGAPv/AQABAAEAAAAGAAYAAQABAAEAAAAGAAcAAQABAAEAAAAHAPr/AQABAAEAAAAHAPv/AgAAAAQAAAAHAP7/AQABAAEAAAAHAAYAAgACAAQAAAAIAPr/AgABAAQAAAAIAPv/AQABAAEAAAAIAAQAAQABAAEAAAAIAAYAAQABAAEAAAAIAAcAAQABAAEAAAAJAPv/AQABAAEAAAAJAAYAAQABAAEAAAAJAAcAAQABAAEAAAAKAPr/AQABAAEAAAAKAAYAAQABAAEAAAAKAAcAAQABAAEAAAALAPr/AgABAAQAAAALAPv/AQABAAEAAAALAPz/AgABAAQAAAALAP3/AQABAAEAAAALAP7/AQABAAAAAAALAP//AQABAAEAAAALAAAAAQABAAIAAAALAAEAAQABAAEAAAALAAIAAQABAAEAAAAMAPr/AQABAAEAAAAMAPv/AQABAAEAAAAMAPz/AQABAAEAAAAMAP3/AQABAAEAAAAMAP7/AQABAAEAAAAMAP//AgAAAAQAAAAMAAAAAgACAAQAAAAMAAEAAQAAAAEAAAAMAAIAAQAAAAIAAAAMAAMAAQABAAEAAAAMAAQAAQABAAEAAAAMAAUAAQABAAEAAAAMAAYAAgAAAAQAAAAMAAcAAQABAAEAAAANAPr/AQABAAEAAAANAPv/AQACAAAAAAANAPz/AQACAAEAAAANAP3/AQACAAEAAAANAP7/AQACAAEAAAANAP//AQACAAEAAAANAAAAAQACAAEAAAANAAEAAQABAAEAAAANAAIAAQABAAIAAAANAAMAAQACAAEAAAANAAQAAQACAAEAAAANAAUAAQACAAEAAAANAAYAAQACAAEAAAANAAcAAQACAAEAAAAOAPr/AQABAAEAAAAOAPv/AQAAAAAAAAAOAPz/AQAAAAEAAAAOAP3/AQAAAAEAAAAOAP7/AQAAAAEAAAAOAP//AQAAAAEAAAAOAAAAAQAAAAEAAAAOAAEAAgABAAQAAAAOAAIAAQABAAEAAAAOAAMAAQAAAAEAAAAOAAQAAQAAAAEAAAAOAAUAAQAAAAEAAAAOAAYAAQAAAAEAAAAOAAcAAQABAAIAAADy//n/AgABAAQAAADy/wgAAQABAAEAAADy/wkAAgAAAAQAAADy/woAAQABAAEAAADy/wsAAQABAAEAAADz//n/AQABAAEAAADz//r/AQABAAEAAADz//v/AQABAAEAAADz//z/AQABAAEAAADz/wgAAQABAAEAAADz/wkAAQABAAEAAADz/woAAQABAAEAAADz/wsAAQABAAEAAAD0//n/AQACAAAAAAD0//r/AQABAAEAAAD0//v/AgACAAQAAAD0//z/AgABAAQAAAD0//3/AQABAAEAAAD0//7/AQABAAEAAAD0////AgABAAQAAAD0/wAAAQABAAEAAAD0/wEAAgABAAQAAAD0/wIAAgAAAAQAAAD0/wMAAQABAAEAAAD0/wQAAQABAAEAAAD0/wUAAgACAAQAAAD0/wYAAgAAAAQAAAD0/wcAAQABAAEAAAD1//n/AQABAAEAAAD1/wgAAQABAAEAAAD1/wkAAQABAAEAAAD1/woAAQABAAEAAAD1/wsAAQABAAEAAAD2//n/AgACAAQAAAD2/wgAAgACAAQAAAD2/wkAAQABAAEAAAD2/woAAQABAAEAAAD2/wsAAQABAAEAAAD3//n/AgABAAQAAAD3/wgAAQABAAEAAAD3/wkAAQABAAEAAAD3/woAAgAAAAQAAAD3/wsAAQABAAEAAAD4//n/AgAAAAQAAAD4/wgAAgAAAAQAAAD4/wkAAQABAAEAAAD4/woAAQABAAEAAAD4/wsAAgABAAQAAAD5//n/AQABAAEAAAD5/wgAAQABAAEAAAD5/wkAAQABAAEAAAD5/woAAQABAAEAAAD5/wsAAQABAAEAAAD6//n/AgACAAQAAAD6/wgAAQABAAEAAAD6/wkAAQABAAEAAAD6/woAAgACAAQAAAD6/wsAAQABAAEAAAD7//n/AQABAAEAAAD7/wgAAQABAAEAAAD7/wkAAQABAAEAAAD7/woAAQABAAEAAAD7/wsAAQABAAEAAAD8//n/AQABAAEAAAD8/wgAAQABAAEAAAD8/wkAAgABAAQAAAD8/woAAQABAAEAAAD8/wsAAQABAAEAAAD9//n/AgABAAQAAAD9/wgAAgAAAAQAAAD9/wkAAQABAAEAAAD9/woAAQABAAEAAAD9/wsAAgABAAQAAAD+//n/AQABAAEAAAD+/wgAAQABAAEAAAD+/wkAAQABAAEAAAD+/woAAQABAAEAAAD+/wsAAQABAAEAAAD///n/AQABAAEAAAD//wgAAQAAAAAAAAD//wkAAQAAAAEAAAD//woAAQAAAAEAAAD//wsAAQAAAAEAAAAAAPn/AQABAAEAAAAAAAgAAQABAAAAAAAAAAkAAQABAAEAAAAAAAoAAgABAAQAAAAAAAsAAgACAAQAAAABAPn/AgABAAQAAAABAAgAAQABAAAAAAABAAkAAQABAAEAAAABAAoAAQABAAEAAAABAAsAAQABAAEAAAACAPn/AQABAAEAAAACAAgAAQABAAAAAAACAAkAAgAAAAQAAAACAAsAAgABAAQAAAADAPn/AQABAAEAAAADAAgAAQACAAAAAAADAAkAAQABAAEAAAADAAoAAgABAAQAAAADAAsAAQABAAEAAAAEAPn/AgABAAQAAAAEAAgAAQABAAEAAAAEAAkAAQABAAEAAAAEAAoAAgAAAAQAAAAEAAsAAQABAAEAAAAFAPn/AgABAAQAAAAFAAgAAQABAAEAAAAFAAkAAgACAAQAAAAFAAoAAQABAAEAAAAFAAsAAQABAAEAAAAGAPn/AQABAAEAAAAGAAgAAQABAAEAAAAGAAkAAQABAAEAAAAGAAoAAQABAAEAAAAGAAsAAQABAAEAAAAHAPn/AQABAAEAAAAHAAgAAQABAAEAAAAIAPn/AQABAAEAAAAIAAgAAQABAAEAAAAIAAkAAQABAAEAAAAIAAoAAQABAAEAAAAIAAsAAQABAAEAAAAJAPn/AQABAAEAAAAJAAgAAgAAAAQAAAAJAAkAAQABAAEAAAAJAAoAAgABAAQAAAAJAAsAAQABAAEAAAAKAPn/AQABAAEAAAAKAAgAAQABAAEAAAAKAAkAAQABAAEAAAAKAAoAAQABAAEAAAAKAAsAAQABAAEAAAALAPn/AQABAAEAAAALAAgAAQABAAEAAAALAAkAAgABAAQAAAALAAoAAgACAAQAAAALAAsAAQABAAEAAAAMAPn/AQABAAEAAAAMAAgAAgABAAQAAAAMAAkAAQABAAEAAAAMAAoAAQABAAEAAAAMAAsAAQABAAEAAAANAPn/AgABAAQAAAANAAgAAQABAAEAAAANAAkAAQABAAEAAAANAAoAAgAAAAQAAAANAAsAAQABAAEAAAAOAPn/AQABAAEAAAAOAAgAAQABAAEAAAAOAAkAAgABAAQAAAAOAAoAAQABAAEAAAAOAAsAAQABAAIAAAAPAPn/AQABAAEAAAAPAPr/AQABAAEAAAAPAPv/AQABAAAAAAAPAPz/AQABAAEAAAAPAP3/AQABAAEAAAAPAP7/AgABAAQAAAAPAP//AQABAAEAAAAPAAAAAgABAAQAAAAPAAEAAQABAAEAAAAPAAIAAgACAAQAAAAPAAMAAQABAAEAAAAPAAQAAgAAAAQAAAAPAAUAAQABAAEAAAAPAAYAAgAAAAQAAAAPAAcAAQABAAIAAAAPAAgAAQABAAEAAAAPAAkAAQABAAEAAAAPAAoAAQABAAEAAAAPAAsAAQAAAAAAAAAQAPn/AQABAAEAAAAQAPr/AQABAAEAAAAQAPv/AQABAAAAAAAQAPz/AgAAAAQAAAAQAAgAAQABAAEAAAAQAAkAAQABAAEAAAAQAAoAAQABAAIAAAAQAAsAAQABAAAAAAARAPn/AgABAAQAAAARAPr/AQABAAEAAAARAPv/AQABAAAAAAARAPz/AQABAAEAAAARAAgAAQABAAEAAAARAAkAAgAAAAQAAAARAAoAAQABAAIAAAARAAsAAQABAAAAAAASAPn/AQABAAEAAAASAPr/AQABAAEAAAASAPv/AQABAAAAAAASAPz/AQABAAEAAAASAP3/AQABAAEAAAASAP7/AgAAAAQAAAASAP//AQABAAEAAAASAAAAAQABAAEAAAASAAEAAQABAAEAAAASAAIAAQABAAIAAAASAAMAAQABAAEAAAASAAQAAQABAAEAAAASAAUAAgABAAQAAAASAAYAAQABAAEAAAASAAcAAQABAAEAAAASAAgAAgACAAQAAAASAAkAAQABAAEAAAASAAoAAQABAAIAAAASAAsAAQABAAAAAADu//j/AQAAAAAAAADu//n/AQAAAAEAAADu//r/AQAAAAEAAADu//v/AQAAAAEAAADu//z/AQAAAAEAAADu//3/AQAAAAEAAADu//7/AQAAAAEAAADu////AQAAAAEAAADu/wAAAQAAAAIAAADu/wEAAgABAAQAAADu/wIAAQABAAEAAADu/wMAAgAAAAQAAADu/wQAAQABAAEAAADu/wYAAQABAAEAAADu/wcAAgAAAAQAAADu/wgAAQABAAEAAADu/wkAAQABAAEAAADu/woAAgAAAAQAAADu/wsAAQABAAEAAADu/w0AAQABAAEAAADv//j/AQABAAAAAADv//n/AQABAAEAAADv//r/AgAAAAQAAADv//v/AgABAAQAAADv//z/AQABAAEAAADv//3/AgACAAQAAADv//7/AQABAAEAAADv////AgABAAQAAADv/wAAAQABAAIAAADv/wEAAQABAAEAAADv/wIAAQABAAEAAADv/wMAAQABAAEAAADv/wQAAgABAAQAAADv/wYAAQABAAEAAADv/wcAAQABAAEAAADv/wgAAQABAAEAAADv/wkAAQABAAEAAADv/woAAQABAAEAAADv/wsAAQABAAEAAADv/wwAAQABAAEAAADv/w0AAgABAAQAAADw//j/AQABAAAAAADw//n/AgACAAQAAADw/wAAAQABAAIAAADw/wEAAQABAAEAAADw/wIAAgACAAQAAADw/wMAAQABAAEAAADw/wQAAQABAAEAAADw/wUAAQABAAEAAADw/wYAAgABAAQAAADw/wcAAQABAAEAAADw/wgAAQACAAEAAADw/wkAAgACAAQAAADw/woAAQACAAEAAADw/wsAAQACAAEAAADw/wwAAQABAAEAAADw/w0AAQABAAEAAADx//j/AQABAAAAAADx//n/AQABAAEAAADx/wAAAQABAAIAAADx/wEAAQACAAEAAADx/wIAAQACAAEAAADx/wMAAQACAAEAAADx/wQAAgACAAQAAADx/wUAAQABAAEAAADx/wYAAQACAAEAAADx/wcAAQACAAIAAADx/wgAAQABAAEAAADx/wkAAQABAAEAAADx/woAAQABAAEAAADx/wsAAQABAAEAAADx/wwAAQABAAAAAADx/w0AAgAAAAQAAADy//j/AQABAAAAAADy/wwAAQABAAEAAADy/w0AAQABAAEAAADz//j/AQACAAAAAADz/wwAAgABAAQAAADz/w0AAQABAAEAAAD0//j/AQABAAEAAAD0/wwAAQABAAEAAAD0/w0AAQABAAEAAAD1//j/AQABAAEAAAD1/wwAAQABAAEAAAD1/w0AAgAAAAQAAAD2//j/AQABAAEAAAD2/wwAAQABAAEAAAD2/w0AAQABAAEAAAD3//j/AQABAAEAAAD3/wwAAgACAAQAAAD3/w0AAQABAAEAAAD4//j/AQABAAEAAAD4/wwAAQABAAEAAAD4/w0AAQABAAEAAAD5//j/AQABAAEAAAD5/wwAAQABAAEAAAD5/w0AAQABAAEAAAD6//j/AQABAAEAAAD6/wwAAQABAAEAAAD6/w0AAgAAAAQAAAD7/wwAAQABAAEAAAD7/w0AAQABAAEAAAD8//j/AQABAAEAAAD8/wwAAgACAAQAAAD8/w0AAgAAAAQAAAD9//j/AQABAAEAAAD9/wwAAQABAAEAAAD9/w0AAQABAAEAAAD+/wwAAQABAAEAAAD+/w0AAQABAAEAAAD///j/AQABAAEAAAD//wwAAQAAAAIAAAD//w0AAQABAAEAAAAAAPj/AQABAAEAAAAAAAwAAQABAAEAAAAAAA0AAgABAAQAAAABAPj/AQABAAEAAAABAAwAAgAAAAQAAAABAA0AAQABAAEAAAACAPj/AQABAAEAAAACAAwAAQABAAEAAAACAA0AAQABAAEAAAADAPj/AQABAAEAAAADAAwAAQACAAIAAAADAA0AAgAAAAQAAAAEAPj/AQABAAEAAAAEAAwAAQABAAEAAAAEAA0AAQABAAEAAAAFAPj/AQABAAEAAAAFAAwAAgACAAQAAAAFAA0AAQABAAEAAAAGAPj/AQABAAEAAAAGAAwAAQABAAEAAAAGAA0AAQABAAEAAAAHAPj/AQABAAEAAAAHAAwAAgAAAAQAAAAHAA0AAQABAAEAAAAIAPj/AQABAAEAAAAIAAwAAQABAAEAAAAIAA0AAQABAAEAAAAJAPj/AQABAAEAAAAJAAwAAgACAAQAAAAJAA0AAgACAAQAAAAKAPj/AgABAAQAAAAKAAwAAQABAAEAAAAKAA0AAQABAAEAAAALAPj/AQABAAEAAAALAAwAAgAAAAQAAAALAA0AAgABAAQAAAAMAPj/AQABAAEAAAAMAAwAAQABAAEAAAAMAA0AAQABAAEAAAANAPj/AQABAAEAAAANAAwAAQABAAEAAAANAA0AAQABAAEAAAAOAPj/AQABAAEAAAAOAAwAAQABAAAAAAAOAA0AAgAAAAQAAAAPAPj/AgABAAQAAAAPAAwAAQABAAEAAAAPAA0AAgAAAAQAAAAQAPj/AQABAAEAAAAQAAwAAgABAAQAAAAQAA0AAQABAAEAAAARAPj/AQABAAEAAAARAAwAAQABAAEAAAARAA0AAgACAAQAAAASAPj/AQABAAEAAAASAAwAAgAAAAQAAAASAA0AAQABAAEAAAATAPj/AgABAAQAAAATAPn/AgACAAQAAAATAPr/AQABAAEAAAATAPv/AQACAAAAAAATAPz/AQACAAEAAAATAP3/AQACAAEAAAATAP7/AQACAAEAAAATAP//AQACAAEAAAATAAAAAQABAAEAAAATAAEAAgACAAQAAAATAAIAAQABAAIAAAATAAMAAQABAAEAAAATAAQAAQABAAEAAAATAAUAAQABAAEAAAATAAYAAQABAAEAAAATAAcAAgAAAAQAAAATAAgAAQABAAEAAAATAAkAAgABAAQAAAATAAoAAQABAAIAAAATAAsAAQABAAAAAAATAAwAAgABAAQAAAATAA0AAQABAAEAAAAUAPj/AQABAAEAAAAUAPn/AQABAAEAAAAUAPr/AQABAAEAAAAUAPv/AQABAAEAAAAUAPz/AQABAAEAAAAUAP3/AQABAAEAAAAUAP7/AQABAAEAAAAUAP//AQABAAEAAAAUAAAAAQABAAEAAAAUAAEAAgAAAAQAAAAUAAIAAQABAAIAAAAUAAMAAQACAAEAAAAUAAQAAQACAAEAAAAUAAUAAQACAAEAAAAUAAYAAQACAAEAAAAUAAcAAQACAAEAAAAUAAgAAQACAAEAAAAUAAkAAQACAAEAAAAUAAoAAQACAAIAAAAUAAsAAgACAAQAAAAUAAwAAQABAAEAAAAUAA0AAQABAAEAAAAVAPj/AQABAAEAAAAVAPn/AgAAAAQAAAAVAPr/AgABAAQAAAAVAPv/AQABAAEAAAAVAPz/AQABAAEAAAAVAP3/AQABAAEAAAAVAP7/AgABAAQAAAAVAP//AQABAAEAAAAVAAAAAQABAAEAAAAVAAEAAQABAAEAAAAVAAIAAQABAAEAAAAVAAMAAQAAAAEAAAAVAAQAAQAAAAEAAAAVAAUAAQAAAAEAAAAVAAYAAQAAAAEAAAAVAAcAAQAAAAEAAAAVAAgAAQAAAAEAAAAVAAkAAQAAAAEAAAAVAAoAAQABAAEAAAAVAAsAAgABAAQAAAAVAAwAAQABAAEAAAAWAPj/AQABAAEAAAAWAPn/AQABAAEAAAAWAPr/AQABAAEAAAAWAPv/AQABAAEAAAAWAPz/AgAAAAQAAAAWAP3/AQABAAEAAAAWAP7/AgABAAQAAAAWAP//AQABAAEAAAAWAAAAAgACAAQAAAAWAAEAAQABAAEAAAAWAAIAAQABAAEAAAAWAAMAAQABAAEAAAAWAAQAAgABAAQAAAAWAAUAAQABAAEAAAAWAAYAAgACAAQAAAAWAAcAAQABAAEAAAAWAAgAAQABAAEAAAAWAAkAAgAAAAQAAAAWAAoAAQABAAEAAAAWAAsAAgABAAQAAAAWAAwAAQABAAEAAAAWAA0AAQABAAEAAAAXAPj/AQABAAEAAAAXAPn/AgABAAQAAAAXAPr/AQABAAEAAAAXAPv/AQABAAEAAAAXAPz/AQABAAEAAAAXAP3/AQABAAEAAAAXAP7/AQABAAEAAAAXAP//AQABAAEAAAAXAAAAAQABAAEAAAAXAAEAAgABAAQAAAAXAAIAAQABAAEAAAAXAAMAAQABAAEAAAAXAAQAAQABAAEAAAAXAAUAAQABAAEAAAAXAAYAAQABAAEAAAAXAAcAAgABAAQAAAAXAAgAAQABAAEAAAAXAAkAAQABAAEAAAAXAAoAAQABAAEAAAAXAAsAAQABAAEAAAAXAAwAAgAAAAQAAAAXAA0AAQABAAEAAAD6/wEAAQABAAEAAAACAAYAAQABAAEAAAACAAoAAQABAAEAAADy/wAAAgAAAAQAAADy/wEAAQABAAEAAADy/wIAAQABAAEAAADy/wMAAgAAAAQAAADy/wQAAQABAAEAAADy/wUAAQABAAEAAADy/wYAAQABAAEAAADy/wcAAQABAAEAAADz//3/AQABAAEAAADz//7/AQABAAEAAADz////AQABAAEAAADz/wAAAQABAAEAAADz/wEAAQABAAEAAADz/wIAAQABAAEAAADz/wMAAQABAAEAAADz/wQAAQABAAEAAADz/wUAAQABAAEAAADz/wYAAQABAAEAAADz/wcAAgABAAQAAAAKAAEAAQABAAEAAAAJAAEAAQABAAEAAAAJAAAAAQABAAIAAADx//r/AQABAAEAAADw//r/AgABAAQAAADw//v/AQABAAEAAADw//z/AQABAAEAAADw//3/AgABAAQAAADw////AQABAAEAAADw//7/AQABAAEAAADy////AQABAAEAAADx////AQABAAEAAAABAP7/AQABAAAAAAAHAAcAAQABAAEAAAA=")
tile_set = SubResource("TileSet_vgcvj")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="beer" parent="." instance=ExtResource("8_xiuak")]
position = Vector2(215, 228)

[node name="Area2D2" type="Area2D" parent="beer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="beer/Area2D2"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ggebb")

[node name="beer2" parent="." instance=ExtResource("8_xiuak")]
position = Vector2(25, 169)

[node name="Area2D2" type="Area2D" parent="beer2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="beer2/Area2D2"]
position = Vector2(0.5, -1.1875)
shape = SubResource("RectangleShape2D_ggebb")

[node name="beer3" parent="." instance=ExtResource("8_xiuak")]
position = Vector2(207, 71)

[node name="Area2D2" type="Area2D" parent="beer3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="beer3/Area2D2"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_ggebb")

[node name="beer4" parent="." instance=ExtResource("8_xiuak")]
position = Vector2(313, 86)

[node name="Area2D2" type="Area2D" parent="beer4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="beer4/Area2D2"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_ggebb")

[node name="beer5" parent="." instance=ExtResource("8_xiuak")]
position = Vector2(59, -2)

[node name="Area2D2" type="Area2D" parent="beer5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="beer5/Area2D2"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ggebb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="KeyCounterLabel" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="UI/PanelPerdu/RetryButton" to="UI/PanelPerdu/RetryButton" method="_on_pressed"]
[connection signal="pressed" from="UI/PanelGagner/BoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="body_entered" from="beer/Area2D2" to="Player" method="_on_area_2d_2_body_entered"]
[connection signal="mouse_entered" from="beer2" to="Player" method="_on_beer_2_mouse_entered"]
[connection signal="body_entered" from="beer2/Area2D2" to="Player" method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="beer3/Area2D2" to="Player" method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="beer4/Area2D2" to="Player" method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="beer5/Area2D2" to="Player" method="_on_area_2d_2_body_entered"]
